--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         </div>
       </div>
     </div>
+    <div>Open Source code by Johanna Avalos</div>
     <script src="src/script.js"></script>
   </body>
 </html>
