--- a/index.html
+++ b/index.html
@@ -82,8 +82,15 @@
           </div>
         </div>
       </div>
+      <small
+        ><a
+          href="https://github.com/JoyAvalos/my-weather-app-shecodesplus"
+          target="_blank"
+          >Open-source code
+        </a>
+        , by Johanna Avalos</small
+      >
     </div>
-    <div>Open Source code by Johanna Avalos</div>
     <script src="src/script.js"></script>
   </body>
 </html>
