--- a/index.html
+++ b/index.html
@@ -91,6 +91,6 @@
         , by Johanna Avalos</small
       >
     </div>
-    <script src="script.js"></script>
+    <script src="src/script.js"></script>
   </body>
 </html>
